add rest of p1 solutions

--- a/backend/leetcode/p1/p1.md
+++ b/backend/leetcode/p1/p1.md
@@ -12,3 +12,15 @@ Explanation: ```nums[0] + nums[1] = 2 + 7 = 9```, return ```[0, 1]```
 The obvious solution to this problem is to simply iterate through the array and check if the sum of the current element and any other element in the array is equal to the target. This solution has a time complexity of O(n^2) and a space complexity of O(1).
 
 --solution1--
+
+## Solution 2: Two Pointers
+A more efficient solution is to sort the array and then use two pointers to find the two numbers that add up to the target. This solution has a time complexity of O(n log n) and a space complexity of O(n).
+
+Notice here that we gained a time complexity of O(n log n) by sorting the array. However, the space complexity goes up to O(n) because we need to store the original indices of the elements in the array.
+
+--solution2--
+
+## Solution 3: Hash Table
+The fastest solution is to use a hash table to store the elements of the array along with their indices. This way, we can check if the complement of the current element is in the hash table in constant time. This solution has a time complexity of O(n) and a space complexity of O(2^n).
+
+--solution3--
